# anonymizer

./: .dockerignore  .gitignore  2506.16406v1.anonymized_output.txt  2506.16406v1.mapping.json  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  README.md  ROADMAP.md  anonymized_output.txt  entities.example.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  lint.yml
101/: index.html
101/history/: index.html
101/how-different/: index.html
101/techniques/: index.html
101/where-needed/: index.html
101/why-anonymization/: index.html
data/deanonymized/: sample.deanonymized.md
data/mappings/: sample.mapping.json
data/stats/: sample.deanonymization_stat.json
docs/: index.md
docs/101/: history.md  how-different.md  index.md  techniques.md  where-needed.md  why-anonymization.md
docs/project/: api-reference.md  api-usage.md  architecture.md  cli-usage.md  index.md  installation.md  recipes.md  troubleshooting.md
pdf_anonymizer/: .env  README.md  call_gemini.py  call_llm.py  cli.py  conf.py  load_and_extract_pdf.py  main.py  pyproject.toml  requirements.txt  utils.py
pdf_anonymizer/pdf_anonymizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pdf_anonymizer/prompts/: detailed.py
pdf_anonymizer/tests/: test_main.py  test_retry_logic.py
pdf_anonymizer/tests/data/: sample.anonymized_output.txt
project/: index.html
project/api-reference/: index.html
project/api-usage/: index.html
project/architecture/: index.html
project/cli-usage/: index.html
project/installation/: index.html
project/recipes/: index.html
project/troubleshooting/: index.html
scripts/: deanonymize.sh  demo_anonymize.py  docker_build.sh  docker_run_test_container.sh  docker_stop_test_container.sh  prepare_demo_pdf.py  run.sh  script
search/: search_index.json
src/pdf_anonymizer/: .env.template  call_llm.py  cli.py  conf.py  core.py  exceptions.py  load_and_extract.py  load_and_extract_pdf.py  main.py  utils.py
src/pdf_anonymizer/prompts/: detailed.py  simple.py
src/pdf_anonymizer/tests/: test_main.py  test_retry_logic.py
src/pdf_anonymizer/tests/data/: sample.mapping.json
tests/: test_consolidation.py  test_deanonymize.py  test_error_handling.py  test_large_pdf.py  test_llm_provider_imports.py  test_main.py  test_regex_ner.py  test_retry_logic.py  test_utils.py  test_variations.py
tests/data/: sample.mapping.json  sample.txt
