[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
workspace = { members = ["packages/*"] }

[project]
name = "pdf-anonymizer-workspace"
version = "0.3.0"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-mock"]

[tool.pytest.ini_options]
pythonpath = [
  "packages/pdf-anonymizer-core/src",
  "packages/pdf-anonymizer-cli/src"
]