[project]
name = "pdf-anonymizer"
version = "0.1.0"
description = "A tool to anonymize PDF files using LLMs."
authors = [{ name = "Jules", email = "jules@example.com" }]
dependencies = [
    "python-dotenv",
    "pymupdf4llm",
    "langchain-text-splitters",
    "google-genai",
    "typer",
    "rich",
    "ollama",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
